Refactor `InfoCenterViewSkin` height computation methods and streamline notification handling
Updated height computation by overriding `computeMinHeight` and `computeMaxHeight` to reuse `computePrefHeight`. Simplified notification list filtering with `toList` and used `getLast` for the latest notification retrieval.